chore: additional build settings

--- a/meson.build
+++ b/meson.build
@@ -1,9 +1,17 @@
-project('project-creator', 'cpp', default_options: 'default_library=static')
+project(
+  'project-creator',
+  'cpp',
+  version: '0.0.1',
+  default_options: [
+    'default_library=static',
+    'cpp_std=c++23',
+    'warning_level=2',
+  ],
+)
 
-incdir = include_directories('src')
 cc = meson.get_compiler('cpp')
 
-ftxui_dep = dependency('ftxui')
+ftxui_dep = dependency('ftxui', required: true)
 m_dep = cc.find_library('m', required: false)
 
 srcs = files(
@@ -15,7 +23,13 @@ srcs = files(
 
 executable(
   'creator',
-  sources: srcs,
-  include_directories: incdir,
-  dependencies: [ftxui_dep, m_dep],
+  srcs,
+  include_directories: [
+    include_directories('src'),
+  ],
+  dependencies: [
+    ftxui_dep,
+    m_dep,
+  ],
+  install: true,
 )
