refactor: get_template_directories into separate module

--- a/meson.build
+++ b/meson.build
@@ -17,6 +17,7 @@ m_dep = cc.find_library('m', required: false)
 srcs = files(
   'bin/main.cpp',
   'src/app.cpp',
+  'src/configuration.cpp',
   'src/project_creator.cpp',
   'src/ui.cpp',
 )
